datacenterproject/rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server
spec:
  type: LoadBalancer
  selector:
    app: rest
  ports:
    - port: 5000
      targetPort: 5000
